# rust_template

./: .gitignore  Cargo.toml  build.ps1
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
